--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 	html{
 		height:100%;
-		background: #ffffff url(https://images.unsplash.com/photo-1476365518243-f738bf58443d?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&cs=tinysrgb&s=624586a31233993820d062fc471c0013); no-repeat center bottom fixed;
+		background: #ffffff url(https://images.unsplash.com/photo-1478004054926-5dcf4534dbf5?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&cs=tinysrgb&s=f54159ded16d1d77e9b910db5c51ee00); no-repeat center bottom fixed;
 		-webkit-background-size: cover;
 		-moz-background-size: cover;
 		-o-background-size: cover;
@@ -293,9 +293,9 @@
 
 			<img id="cspio-logo" src="https://s3.amazonaws.com/hh-static-assets/hh-logo2.png">
 
-			<h1 id="cspio-headline">Down for Scheduled Maintenance</h1>
+			<h1 id="cspio-headline">We're Growing</h1>
 
-			<div id="cspio-description">Our Site Is down for Scheduled Maintenance and Will Be Back Shortly. In the Meantime Feel Free to Contact Us Directly by Phone or Email.  </div>
+			<div id="cspio-description">Our Site Is down for a Scheduled Upgrade and Will Be Back Shortly. In the Meantime Feel Free to Contact Us Directly by Phone or Email, We Look Forward to Hearing from You.</div>
 
 			<!--<form id="cspio-form" action="" method="post">
 				<div id="cspio-field-wrapper">
